@@ -1,11 +1,17 @@
 # duke-gopher
-JEP419 sample (Call to Golang func from Java)
+JEP419 sample (Call to Golang from Java)
 
 ## How to run
 
-1. Install [Java 18 (OpenJDK)](https://adoptium.net/temurin/releases?version=18), [Go](https://go.dev/dl/) + [gcc](https://gcc.gnu.org/install/binaries.html).
-2. `git clone git@github.com:YujiSoftware/duke-gopher.git`
-3. `make run`
+Install [Java 18 (OpenJDK)](https://adoptium.net/temurin/releases?version=18), [Go](https://go.dev/dl/) + [gcc](https://gcc.gnu.org/install/binaries.html).
+
+```sh
+go build -o libgopher.so -buildmode=c-shared main.go
+
+java -Djava.library.path=$(pwd) --add-modules=jdk.incubator.foreign --enable-native-access=ALL-UNNAMED Main.java
+```
+
+or `make run`
 
 ## Related Documents
 
